<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.azapps.tjob_app.ui.CriarPerfilActivity"
    >
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="2dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perfil_cadastro_tv"
                android:textSize="25sp"
                android:layout_marginTop="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:background="@color/colorPrimary"
                android:layout_margin="2dp">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_dt_nasc"
                    style="@style/mCustomEditText2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    >

                    <EditText
                        android:id="@+id/edt_cadastro_perfil_dt_nasc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/idade_cadastro_perfil"
                        android:inputType="textShortMessage" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_telefone"
                    style="@style/mCustomEditText2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >

                    <EditText
                        android:id="@+id/edt_cadastro_perfil_telefone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/telefone_cadastro"
                        android:inputType="phone" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_sexo"
                    style="@style/mCustomEditText2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >

                    <Spinner
                        android:id="@+id/sp_cadastro_perfil_sexo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:prompt="@string/titulo_spiner_sexo"
                        >

                    </Spinner>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_github"
                    style="@style/mCustomEditText2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >

                    <EditText
                        android:id="@+id/edt_cadastro_perfil_github"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/git_hub_casastro"
                        android:inputType="textEmailSubject" />

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_perfil_profissional"
                style="@style/mCustomEditText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_cadastro_perfil_profissional"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/perfil_profissional"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_experiencia"
                style="@style/mCustomEditText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_cadastro_perfil_experiencia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/experiencias_profissional"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/endereco_cadastro_tv"
                android:textSize="25sp"
                android:layout_marginTop="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:background="@color/colorPrimary"
                android:layout_margin="2dp">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_logradouro"
                    style="@style/mCustomEditText2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <EditText
                        android:id="@+id/edt_cadastro_perfil_logradouro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/logradouro_cadastro"
                        android:inputType="textShortMessage" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_cep"
                    style="@style/mCustomEditText2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/edt_cadastro_perfil_cep"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cep_cadastro"
                        android:inputType="number" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_estado"
                    style="@style/mCustomEditText2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/edt_cadastro_perfil_estado"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/estado_cadastro"
                        android:inputType="textShortMessage" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_cidade"
                    style="@style/mCustomEditText2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/edt_cadastro_perfil_cidade"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cidade_cadastro"
                        android:inputType="textShortMessage" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="16dp"></LinearLayout>

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_criar_perfil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_check_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.907"
        android:src="@drawable/ic_check"
        android:clickable="true"/>

</android.support.constraint.ConstraintLayout>
