<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        >

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            card_view:cardBackgroundColor="#FFFFFF"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="4dp"
            android:layout_margin="4dp"
            android:layout_marginBottom="12dp"
            android:paddingBottom="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/edt_fragment_perfil_macths"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:text="@string/macth_s"
                android:layout_margin="8dp"
                android:textSize="12sp"
                android:textStyle="bold"
                android:clickable="true"
                android:textColor="#000000"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:background="@color/colorDarkGray"

                />

            <TextView
                android:id="@+id/edt_fragment_perfil_curtidas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:text="@string/job_curtidos"
                android:layout_margin="8dp"
                android:textSize="12sp"
                android:textStyle="bold"
                android:clickable="true"
                android:textColor="#000000"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:background="@color/colorDarkGray"
                />

            <TextView
                android:id="@+id/edt_fragment_perfil_editar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:text="@string/editar_informa_es"
                android:layout_margin="8dp"
                android:textSize="12sp"
                android:textStyle="bold"
                android:clickable="true"
                android:textColor="#000000"
                />


        </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_lista_job_perfil"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">

        </android.support.v7.widget.RecyclerView>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_fragment_perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        />

</RelativeLayout>